FIX: change sidebar styles / update dimensions and spacing

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -10,7 +10,7 @@
     --admss-app-screen-sm: 600px;
 
     --admss-app-aside-collapsed-width: 84px;
-    --admss-app-aside-expanded-width: 201px;
+    --admss-app-aside-expanded-width: 228px;
     --admss-app-content-top-margin: 50px;
     --admss-app-header-height: 108px;
     --admss-app-dialog-border-radius: 15px;
